* ext/pathname/pathname.c (path_entries): add document suggested by   the thread [ruby-core:41959] [Bug #5859].

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@34246 b2dd03c8-39d4-4d8f-98ff-823fe69b080e